# option-calibration

./: .gitignore  CMakeLists.txt  README.md  compile.sh  example.cpp  implied_volatility.csv  main.cpp  plotter.py
examples/: 1-price_european_options.cpp  2-implied_volatility.cpp  3-model_calibration.cpp
headers/: calendar.h  date.h  greeks.h  market.h  options.h  options_american.h  options_european.h  pde.h  pde_solver.h  pricing_models.h  solve.h
resources/: NIFTY_call_data_12_sep_2024.csv  NIFTY_put_data_12_sep_2024.csv  NIFTY_put_data_1_aug_2024.csv  us_holidays.csv
src/: calendar.cpp  date.cpp  options.cpp  pde.cpp  pde_solver.cpp  pricing_models.cpp  solve.cpp
